<resources>
    <string name="app_name">Coupon</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_coupons">Coupons</string>
    <string name="title_gift_cards">Gift Cards</string>
    <string name="title_shops">Shops</string>
    <string name="title_more">More</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
