<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_coupons"
        android:icon="@drawable/ic_coupons"
        android:title="@string/title_coupons" />

    <item
        android:id="@+id/navigation_gift_card"
        android:icon="@drawable/ic_gift_card"
        android:title="@string/title_gift_cards" />

    <item
        android:id="@+id/navigation_shops"
        android:icon="@drawable/ic_shopping_bag"
        android:title="@string/title_shops" />

    <item
        android:id="@+id/navigation_more"
        android:icon="@drawable/ic_more"
        android:title="@string/title_more" />

</menu>
